# Needleman-Wunsch-Aligner

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aligner.rs  analysis.rs  utils.rs
